# CoffeBasicBackend

./: .db.go.swp  Dockerfile  README.md  createRequest.json  docker-compose.yml  go.mod
api/: api_coffe_bag.go  api_coffe_type.go  api_init.go
db/: db_init.go
db/models/: coffe_bag_model.go  coffe_type_model.go
front/: Dockerfile  index.py  pyproject.toml
front/templates/: add-bag-form.html  add-form.html  bag-list.html  index.html  type-list.html
main/: main.go
sql/init/: 001_create-coffe-table.up.sql  002_create-coffe-bag-table.up.sql
