[tool.poetry]
name = "front-coffe"
version = "0.1.0"
description = ""
authors = ["Kacper Filipiak <kisielWrosole@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.1"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
